--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fonts.css">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_ui.css">
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.1">
     <link rel="stylesheet" href="assets/css/moduli.css">
     <link rel="stylesheet" href="assets/css/scadenze.css?v=5.0">
 
